--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">My First App</string>
-    <string name="button_label">Click!</string>
+    <string name="button_label">Ver Lista</string>
 </resources>
