--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My First App</string>
     <string name="button_label">Ver Lista</string>
+    <string name="second_button_label">Ver item</string>
 </resources>
